# weather_app

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.py  converters.py  coordinates.py  exceptions.py  patterns.py  pyproject.toml  shell_command.py  shell_commands.py  weather.py  weather_api_service.py  weather_formatter.py
.github/workflow/: github_actions.yaml
.github/workflows/: github_actions.yaml
tests/: test_e2e.py  test_exceptions.py  test_modules.py
